# orc-rust-ator

./: .dockerignore  .env  .env.example  .gitignore  AGENT_INSTRUCTIONS.md  API_DOCUMENTATION.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DOCKERFILE  Dockerfile  LICENSE  PROJECT_PLAN.md  README.md  auth_test_out.txt  bacon.toml  build.rs  docker-compose.yaml  docker-entrypoint.sh  jobs.yaml  test_data.csv  test_out.txt  test_output.txt
docs/: API_DOCUMENTATION.md  CHANGELOG.md  DATABASE_RELATIONSHIPS.md  GRPC_IMPLEMENTATION_GUIDE.md  LOCAL_SETUP.md  PROJECT_PLAN.md  SYSTEM_DESIGN.md  initial_setup.md
example_jobs/: README.md  holidays_job.json  iss_location_job.json  weather_api_job.yaml
migrations/: 20251020120000_initial_schema.up.sql  20251025120000_add_users_table.up.sql  20251030120000_add_warehouse_metadata.up.sql  20251101000000_add_updated_at_to_job_runs.up.sql
proto/: orc-rust-ator.proto
scripts/: create_example_job.ps1  setup_db.ps1  setup_db.sh
src/: auth.rs  banner.rs  config.rs  job_def.rs  lib.rs  logger.rs  main.rs  metadata.rs  pipelines.rs
src/api/: auth.rs  grpc_service.rs  handlers.rs  mod.rs
src/extractors/: api_extractor.rs  csv_extractor.rs  mod.rs  parquet_extractor.rs
src/loaders/: duckdb_loader.rs  mod.rs
src/models/: mod.rs  user.rs
src/orchestrator/: job_manager.rs  mod.rs  scheduler.rs  worker_manager.rs
src/plugins/: mod.rs
src/plugins/extractors/: api_extractor.rs  csv_extractor.rs  mod.rs  parquet_extractor.rs
src/plugins/loaders/: duckdb_loader.rs  mod.rs
src/state/: db.rs  mod.rs
src/utils/: seeder.rs
src/worker/: mod.rs
tests/: integration_test.rs
tests/common/: mod.rs
warehouse/schemas/: init.sql
