[package]
name = "orc-rust-ator"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug = true        # Line tables only, much smaller than full debug info
# debug = 0      # No debug info at all (smallest)
incremental = true

[profile.release]
debug = false
strip = true
lto = true       # Link-time optimization
codegen-units = 1

[dependencies]
# Core Async Runtime
tokio = { version = "1.46.1", features = ["full"] }

# DataFrames
polars = { version = "0.49.1", features = ["lazy",
                                            "ipc",
                                            "parquet",
                                            "json",
                                            "csv",
                                            "dtype-full",
                                            "strings",
                                            "temporal",
                                            "performant",
                                            "ipc_streaming"] }


#arrow = { version = "55.2.0", features = ["ffi"] }

# Configuration
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version ="1.0.141" }
serde_yaml = "0.9.33"

# API Calls
reqwest = { version = "0.12.22", features = ["json"] }

# Data Warehouse (Sink)
duckdb = { version = "1.3.2", features = ["bundled", "appender-arrow", "json", "parquet"] }

# uuid v7 is a time-ordered UUID, great for DB primary keys.
uuid = { version = "1.9.1", features = ["v7", "serde"] } # "serde" allows it to be easily serialized/deserialized


# --- Scheduling & Time ---
# cron is used to parse and evaluate cron schedule strings.
cron = "0.15.0"

# chrono is for handling timestamps (e.g., created_at, started_at).
chrono = { version = "0.4.38", features = ["serde"] } # "serde" is useful for serialization

# Database (Source - example)
# sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres" ] } # Add features for your source DBs

# Error Handling
anyhow = "1.0.98"
#thiserror = "2.0.12"

# This is required for using `async fn` in traits
async-trait = "0.1.88"

#Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "time"] }

# Utility for creating temporary files for the IPC bridge.
tempfile = "3.20.0"