[package]
name = "orc-rust-ator"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug = true
incremental = true

[profile.release]
debug = false
strip = true
lto = "thin"
#codegen-units = 1

[lib]
path = "src/lib.rs"

[dependencies]
# Core Async Runtime
tokio = { version = "1.38.0", features = ["full"] }

# DataFrames
polars = { version = "0.41.3", features = ["lazy", "csv", "parquet", "json", "ipc"], default-features=false}

# Configuration
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"

# API Calls@path/to/file
reqwest = { version = "0.12.5", features = ["json"] }

# uuid v7 is a time-ordered UUID, great for DB primary keys.
uuid = { version = "1.8.0", features = ["v4", "v7", "serde"] }

# --- Web Framework (for API) ---
axum = "0.8"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }


# --- Scheduling & Time ---
# cron is used to parse and evaluate cron schedule strings.
cron = "0.12.1"

# chrono is for handling timestamps (e.g., created_at, started_at).
chrono = { version = "=0.4.39", features = ["serde"] }

# --- State Store ---
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "sqlite", "uuid", "chrono", "json", "migrate"] }

# Error Handling
anyhow = "1.0.86"
async-trait = "0.1.80"

#Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time"] }

# DuckDB
duckdb = { version = "0.10.2", features = ["bundled", "appender-arrow"] }

# Tempfile
tempfile = "3.20.0"
serde_yaml = "0.9.34"
clap = { version = "4.5.57", features = ["derive"] }
bcrypt = "0.18.0"
jsonwebtoken = "10.3.0"
axum-extra = { version = "0.12", features = ["typed-header"] }
tonic = { version = "0.14.3", features = ["transport", "codegen", "router"] }
prost = "0.14.3"
prost-types = "0.14.3"
tonic-prost = "0.14.3"

[dev-dependencies]

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-build = { version = "0.14.3", features = ["transport"] }
tonic-prost-build = "0.14.3"
